[package]
name = "redis-reindex"
version = "0.1.0"
authors = ["Paul Grandperrin <paul.grandperrin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.14"
#lazy_static = "1.4"
failure = "0.1"
crossbeam-channel = "0.4"
crossbeam-utils = "0.7"
rayon = "1.3"
itertools = "0.8"